# dogfood

./: .gitignore  CMakeLists.txt  vcpkg.json
00-template/: main.cpp
01-qt-plot/: MainWindow.cpp  MainWindow.h  main.cpp
02-interface-v2/: main.cpp
02-simple-sounds/: main.cpp
03-midi/: main.cpp
04-audio-file-write/: main.cpp
100-fun/: main.cpp
